src/objects/Assessment_Question__c.object
<CustomObject>
    <fields>
        <fullName>Assessment__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Assessment_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Assessor_Notes__c</fullName>
        <label>Assessor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choices__c</fullName>
        <label>Choices</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Column__c</fullName>
        <label>Date Column</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note_Description__c</fullName>
        <label>Note Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QuestionNumber__c</fullName>
        <label>QuestionNumber</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Header__c</fullName>
        <label>Section Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Question__c</fullName>
        <label>Sub Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Hold DataType.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freetext</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assessment Question</label>
    <nameField>
        <displayFormat>AQ-{0000000000}</displayFormat>
        <label>Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>